--- a/my-react-app/src/component/TableComponent/Table.css
+++ b/my-react-app/src/component/TableComponent/Table.css
@@ -10,12 +10,12 @@
 }
 
 .example-table th {
-  background-color: #b5b5b5;
-  color: black;
+  background-color: #f2f2f2;
+  color: rgb(79, 79, 79);
 }
 
 .example-table tbody tr:nth-child(even) {
-  background-color: #f2f2f2;
+ border: 0.5px solid rgb(214, 213, 213);
 }
 
 .example-table tbody tr:hover {
@@ -32,4 +32,13 @@
 }
 .tablecomponent{
     border: 1px solid rgb(171, 167, 167);
+}
+
+.status{
+  border: 1px solid rgb(9, 201, 111);
+  text-align: center;
+  border-radius: 3px;
+  background-color: rgb(176, 240, 176);
+  font-size: 12px;
+  font-weight: 500;
 }
