--- a/my-react-app/src/component/TableComponent/Table.css
+++ b/my-react-app/src/component/TableComponent/Table.css
@@ -31,7 +31,7 @@
   width: 100%;
 }
 .tablecomponent{
-    border: 1px solid rgb(171, 167, 167);
+    border: 1px solid rgb(215, 215, 215);
 }
 
 .status{
@@ -41,4 +41,5 @@
   background-color: rgb(176, 240, 176);
   font-size: 12px;
   font-weight: 500;
+  border-radius: 1px;
 }
