--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -1,7 +1,65 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.App {
+  text-align: center;
+  background: rgb(243, 243, 243);
 }
 
- 
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.Toastify__toast--default {
+  background-color: #cecaca;
+  color: black;
+}
+
+.Toastify__toast--success {
+  background-color: rgb(112, 255, 112);
+  color: black;
+}
+
+.Toastify__toast--error {
+  background-color: rgb(248, 146, 146);
+  color: black;
+}
+
+p {
+  color: rgb(98, 97, 97);
+  font-weight: 400;
+
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+button {
+  font-weight: bold;
+  
+}
