--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -1,16 +1,21 @@
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
- 
 
-@import "~bootstrap/dist/css/bootstrap.min.css";
+ button{
+  background: #000;
+ }
+/* src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
